--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -25,18 +25,15 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
-    env:
-      MDBOOK_VERSION: 0.4.44
     steps:
       - uses: actions/checkout@v4
-      - name: Install mdBook
+      - name: Install mdBook & extensions
         run: |
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
-          cargo install --version ${MDBOOK_VERSION} mdbook
+          cargo install mdbook mdbook-embedify
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -47,7 +44,6 @@ jobs:
         with:
           path: ./book
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
